--- a/index.html
+++ b/index.html
@@ -355,7 +355,7 @@
                         <p> I have co-led and co-designed the week-long Python Bootcamp for the REU program.  The materials are for all enthusiastic, ready-to-be astronomy researchers, with zero Python knowledge required. The materials will also be useful for research methods class in Astronomy. </p>
                         <p>    Feel free to reach out to me for any questions:) 
                         </p>
-                        <a href="project_bar_fraction_since_z_at_4.html" class="project_type2-link">Materials available on Github →</a>
+                        <a href="https://github.com/kguo42/python-bootcamp-summer" class="project_type2-link">Materials available on Github →</a>
                     </div>
                     <div class="project_type2-card">
                         <h3>Press Release</h3>
