--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
         }
 
         .skill-card {
-            background: linear-gradient(135deg, #ebb51e 0%, #f3d021 100%);
+            background: linear-gradient(135deg, #ebb51e 0%, #ffe222 100%);
             color: white;
             padding: 20px;
             border-radius: 15px;
