--- a/index.html
+++ b/index.html
@@ -281,7 +281,7 @@
                 <a href="https://github.com/kguo42" target="_blank">GitHub</a>
                 <a href="https://ui.adsabs.harvard.edu/user/libraries/v3vV97prRpiLm2LL9jqNIg" target="_blank">Publications</a>
                 <a href="https://orcid.org/my-orcid?orcid=0000-0002-4162-6523" target="_blank">ORCID</a>
-                <a href="https://drive.google.com/file/d/10MVK4Mill5cOxWF4WAW1Z20gBzU6qW6n/view?usp=sharing" target="_blank">Full CV</a>
+                <a href="https://drive.google.com/file/d/1aQ6F3ErjD80I5Yr2BN8TJ4pqEUc7BoV3/view?usp=share_link" target="_blank">Full CV</a>
                 <a href="mailto:kayguo98@utexas.edu">Email</a>
             </div>
         </header>
